--- a/www/style.css
+++ b/www/style.css
@@ -11,3 +11,15 @@ h1 {
 h2 {
   margin-left:2%;
 }
+
+#win-ppg {
+  padding-top:1%;
+}
+
+#win-oppg {
+  padding-top:1%;
+}
+
+#teamData {
+  padding-top:1%;
+}
