--- a/www/style.css
+++ b/www/style.css
@@ -22,4 +22,13 @@ h2 {
 
 #teamData {
   padding-top:1%;
+  padding-left:2%;
+}
+
+#columnSelect {
+  padding-top:10%;
+}
+
+#leagueData {
+  padding-top:5%;
 }
