--- a/www/style.css
+++ b/www/style.css
@@ -32,3 +32,15 @@ h2 {
 #leagueData {
   padding-top:5%;
 }
+
+#team-1 {
+  padding-left:3%;
+}
+
+#team-2 {
+  padding-left:3%;
+}
+
+#Xaxis {
+  padding-top:11%;
+}
